--- a/index.html
+++ b/index.html
@@ -77,12 +77,12 @@
 
     // Your web app's Firebase configuration
     const firebaseConfig = {
-      apiKey: "AIzaSyCEGqXL1dtcotOYudzgZklkwZbDzFjCw0U",
-      authDomain: "fichazona.firebaseapp.com",
-      projectId: "fichazona",
-      storageBucket: "fichazona.appspot.com",
-      messagingSenderId: "849742326472",
-      appId: "1:849742326472:web:0ae3b3056b2b301b1693fd"
+      apiKey: "AIzaSyCmi3kh9-BjC9gCB1f4236qCtQbJJuQC-s",
+      authDomain: "rpg-do-ordem.firebaseapp.com",
+      projectId: "rpg-do-ordem",
+      storageBucket: "rpg-do-ordem.appspot.com",
+      messagingSenderId: "595529226713",
+      appId: "1:595529226713:web:b385b055e7405de70ce1c8"
     };
 
     // Initialize Firebase
